# ramer-douglas-peucker-visualiser

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/App/: GraphicsViewWidget.hpp  MainWidget.hpp  MainWindow.hpp  Renderer.hpp  SimplificationPanelWidget.hpp
include/Contour/: ContourExtractor.hpp
shaders/: simple.fs  simple.vs
src/: main.cpp
src/App/: GraphicsViewWidget.cpp  MainWidget.cpp  MainWindow.cpp  Renderer.cpp  SimplificationPanelWidget.cpp
src/Contour/: ContourExtractor.cpp
